--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Reaction tester</h1>
-        <p>Click on the box as soon as you can</p>
+        <p>Click on the boxes as soon as you can</p>
         <div id="shape"></div>
         <script src="rt.js"></script>
     </body>
