--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         
     </head>
     <body>
-        <h1 id="main-heading">Reaction Tester Click on the boxes as soon as you can</h1> 
+        <h1 id="main-heading">Reaction Tester:  Click on the boxes as soon as you can</h1> 
         <div id="shape"></div>
         <script src="rt.js"></script>
     </body>
